<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>

    <string name="password">password</string>
    <string name="username">\@username</string>
    <string name="firstName">first name</string>
    <string name="lastName">last name</string>
    <string name="takeAPhoto">take a photo</string>
    <string name="register">Register</string>

    <string name="sampleTimestamp">Oct 7 2020 11:20 AM</string>
    <string name="sampleStatusBody">This is a sample post</string>

    <string name="follow">Follow</string>
    <string name="following">Following</string>

    <string name="separator">" - "</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
</resources>
